<resources>
    <string name="app_name">Calculadora</string>
    <string name="calculadora">Calculadora</string>
    <string name="calculadora1">CALCULADORA</string>
    <string name="n_mero_2">Número 2</string>
    <string name="n_mero_1">Número 1</string>
    <string name="sumar">Sumar</string>
    <string name="restar">Restar</string>
    <string name="multiplicar">Multiplicar</string>
    <string name="dividir">Dividir</string>
    <string name="name">Name</string>
    <string name="desarrollado_por_luis_fuentes">Desarrollado por Luis Fuentes</string>
    <string name="todo">TODO</string>
</resources>