<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <EditText
        android:id="@+id/numero1"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginTop="40dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/n_mero_1"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        tools:ignore="LabelFor,TextContrastCheck" />

    <EditText
        android:id="@+id/numero2"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginTop="44dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/n_mero_2"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/numero1"
        tools:ignore="LabelFor,TextContrastCheck" />

    <Button
        android:id="@+id/buttonSumar"
        android:layout_width="120dp"
        android:layout_height="48dp"
        android:layout_marginTop="44dp"
        android:text="@string/sumar"
        app:layout_constraintEnd_toEndOf="@+id/numero2"
        app:layout_constraintStart_toStartOf="@+id/numero2"
        app:layout_constraintTop_toBottomOf="@+id/numero2" />

    <Button
        android:id="@+id/buttonRestar"
        android:layout_width="120dp"
        android:layout_height="48dp"
        android:layout_marginTop="24dp"
        android:text="@string/restar"
        app:layout_constraintEnd_toEndOf="@+id/buttonMultiplicar"
        app:layout_constraintStart_toStartOf="@+id/buttonMultiplicar"
        app:layout_constraintTop_toBottomOf="@+id/buttonSumar" />

    <Button
        android:id="@+id/buttonMultiplicar"
        android:layout_width="120dp"
        android:layout_height="48dp"
        android:layout_marginTop="24dp"
        android:text="@string/multiplicar"
        app:layout_constraintEnd_toEndOf="@+id/buttonDividir"
        app:layout_constraintStart_toStartOf="@+id/buttonDividir"
        app:layout_constraintTop_toBottomOf="@+id/buttonRestar" />

    <Button
        android:id="@+id/buttonDividir"
        android:layout_width="120dp"
        android:layout_height="48dp"
        android:layout_marginTop="24dp"
        android:text="@string/dividir"
        app:layout_constraintEnd_toEndOf="@+id/textView"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/buttonMultiplicar" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/desarrollado_por_luis_fuentes"
        android:textSize="8sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonDividir"
        tools:ignore="SmallSp" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="95dp"
        android:layout_height="83dp"
        android:layout_marginTop="50dp"
        android:contentDescription="@string/todo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/calculator_technology_svgrepo_com" />

</androidx.constraintlayout.widget.ConstraintLayout>